--- a/mysql-backup/Chart.yaml
+++ b/mysql-backup/Chart.yaml
@@ -6,8 +6,8 @@ type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 0.1.0
+version: 0.1.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: 1.16.0
+appVersion: a7eea23f89db18e29318d8e3fc824f1c9cc54aa5
