--- a/mysql-backup/Chart.yaml
+++ b/mysql-backup/Chart.yaml
@@ -1,13 +1,6 @@
-apiVersion: v1
+apiVersion: v2
 name: mysql-backup
 description: Registers cronjob for mysql database backup and uplaods
-
 type: application
-
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-version: 0.0.1
-
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application.
-appVersion: a7eea23f89db18e29318d8e3fc824f1c9cc54aa5
+version: 0.1.2
+appVersion: 0.10.0
